[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://UI/SettingsUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/crosshair.png" type="Texture" id=3]
[ext_resource path="res://UI/JournalUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Fonts/FluffText.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Fonts/DiagnosticsText.tres" type="DynamicFont" id=6]
[ext_resource path="res://UI/Diagnostics.gd" type="Script" id=7]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="SettingsUI" parent="." instance=ExtResource( 2 )]

[node name="JournalUI" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Diagnostics" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
alignment = 2
script = ExtResource( 7 )

[node name="FPS" type="Label" parent="Diagnostics"]
unique_name_in_owner = true
margin_right = 103.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
text = "FPS"

[node name="TransformDiagnostics" type="Label" parent="Diagnostics"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 103.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 6 )

[node name="FPSUpdateTimer" type="Timer" parent="Diagnostics"]
wait_time = 0.2

[node name="CrosshairContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CrosshairControl" type="Control" parent="CrosshairContainer"]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2

[node name="Crosshair" type="Sprite" parent="CrosshairContainer/CrosshairControl"]
unique_name_in_owner = true
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[connection signal="timeout" from="Diagnostics/FPSUpdateTimer" to="Diagnostics" method="_on_FPSUpdateTimer_timeout"]
